--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">噪音产生器</string>
+    <string name="app_name">噪音产生器！</string>
     <string name="about_intro">用怎样的节奏抵制寝室的喧闹</string>
     <string name="activity_about">关于</string>
     <string name="about_developer">API 调用者：canwdev</string>
