--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,10 +3,38 @@
     <string name="about_intro">用怎样的节奏抵制寝室的喧闹</string>
     <string name="activity_about">关于</string>
     <string name="about_developer">API 调用者：canwdev</string>
-    <string name="about_info">长时间播放噪音有风险，后果自负。</string>
+    <string name="about_info">警告：长时间播放噪音有风险，后果自负。</string>
     <string name="about_github">开源地址...</string>
     <string name="navigation_drawer_open">打开抽屉</string>
     <string name="navigation_drawer_close">关闭抽屉</string>
     <string name="loading">加载中...</string>
     <string name="activity_settings">设置</string>
+    <string name="hour">时</string>
+    <string name="minute">分</string>
+    <string name="second">秒</string>
+    <string name="auto_exit">自动退出</string>
+    <string name="bgm_pause">BGM 暂停</string>
+    <string name="bgm_playing">BGM 播放中</string>
+    <string name="toast_adv_cycle_not_allowed">高级间隔循环不允许重复循环播放</string>
+    <string name="toast_cycle_not_allowed">不允许重复循环播放，请到设置修改</string>
+    <string name="settings_switch">开关（部分设置重启应用生效）</string>
+    <string name="settings_ra2sound">红警2菜单滑动音效</string>
+    <string name="settings_drawer_sound">抽屉音效</string>
+    <string name="settings_touch_sound">触摸条目时发声</string>
+    <string name="settings_touch_event">触摸事件</string>
+    <string name="settings_cycle">循环设置（长按条目循环播放）</string>
+    <string name="settings_allow_cycle">允许重复</string>
+    <string name="settings_interval">固定间隔（毫秒）</string>
+    <string name="settings_advanced_interval">高级间隔（毫秒）</string>
+    <string name="settings_advi_short">高级间隔：短时间</string>
+    <string name="settings_advi_long">高级间隔：长时间</string>
+    <string name="reset_soundpool">重置 SoundPool</string>
+    <string name="force_close">强行停止</string>
+    <string name="random">随机</string>
+    <string name="stop">停止</string>
+    <string name="stop_timer">定时停止</string>
+    <string name="activity_stop_timer">定时停止播放</string>
+    <string name="toast_press_again_to_exit">再按一次退出</string>
+    <string name="toast_cycle_stop">循环播放停止</string>
+    <string name="toast_invalid_time">时间无效</string>
 </resources>
