Fix the FC caused by big _cover.jpg

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -41,5 +41,5 @@
     <string name="professional">Professional</string>
     <string name="settings_detail_view">Detail view</string>
     <string name="activity_detail_view">Detail View</string>
-    <string name="settings_detail_view_summary">Click to show details (JellyBean+)</string>
+    <string name="settings_detail_view_summary">Click to show details</string>
 </resources>
