--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,7 +38,7 @@
     <string name="toast_cycle_stop">循环播放停止</string>
     <string name="toast_invalid_time">时间无效</string>
     <string name="professional">专业版</string>
-    <string name="settings_detail_view_summary">点击条目显示详细信息 (JellyBean+)</string>
+    <string name="settings_detail_view_summary">点击条目显示详细信息</string>
     <string name="settings_detail_view">详细信息</string>
     <string name="activity_detail_view">详细信息</string>
     <string name="restart_app">Restart App</string>
