--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -42,4 +42,5 @@
     <string name="settings_detail_view">Detail view</string>
     <string name="activity_detail_view">Detail View</string>
     <string name="settings_detail_view_summary">Click to show details</string>
+    <string name="restart_app">Restart app</string>
 </resources>
