--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,12 +22,12 @@
     <string name="settings_drawer_sound">抽屉音效</string>
     <string name="settings_touch_sound">触摸条目时发声</string>
     <string name="settings_touch_sound_summary">触摸事件</string>
-    <string name="settings_cycle">循环设置 - 长按条目循环播放，单位毫秒</string>
+    <string name="settings_cycle">循环设置 - 长按条目循环播放</string>
     <string name="settings_allow_cycle">固定间隔允许重复</string>
-    <string name="settings_interval">固定间隔时间</string>
+    <string name="settings_interval">固定间隔时间 - 毫秒</string>
     <string name="settings_advanced_interval">高级间隔</string>
-    <string name="settings_advi_short">高级间隔：短时间</string>
-    <string name="settings_advi_long">高级间隔：长时间</string>
+    <string name="settings_advi_short">高级间隔：短时间 - 秒</string>
+    <string name="settings_advi_long">高级间隔：长时间 - 分</string>
     <string name="reset_soundpool">重置 SoundPool</string>
     <string name="force_close">强行停止</string>
     <string name="random">随机</string>
@@ -43,4 +43,7 @@
     <string name="settings_detail_view">详细信息</string>
     <string name="activity_detail_view">详细信息</string>
     <string name="restart_app">重启应用</string>
+    <string name="settings_advi_times">高级间隔：最大重复次数</string>
+    <string name="settings_advi_times_summary">随机播放1~最大次数次</string>
+    <string name="activity_trouble_maker">TroubleMaker</string>
 </resources>
