--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -45,4 +45,5 @@
     <string name="restart_app">Restart app</string>
     <string name="settings_advi_times">Advanced interval: maxCount</string>
     <string name="settings_advi_times_summary">Random play count from 1 to maxCount</string>
+    <string name="activity_trouble_maker_intro">This mode detects any sounds, then blasts random noise when it hears anything according to sensitivity. This ensures you are the master of the room at all times! (Does not work well on all device yet)</string>
 </resources>
