--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,6 +45,7 @@
     <string name="restart_app">重启应用</string>
     <string name="settings_advi_times">高级间隔：最大重复次数</string>
     <string name="settings_advi_times_summary">随机播放1~最大次数次</string>
-    <string name="activity_trouble_maker">TroubleMaker</string>
+    <string name="activity_trouble_maker">声控模式</string>
     <string name="activity_trouble_maker_intro">此模式检测任何声音，然后根据灵敏度听到任何声音时会发出随机噪声。 这确保您始终是房间的主人！ （在某些设备上可能不能正常工作）</string>
+    <string name="choose_noise_set">Choose noise set</string>
 </resources>
