--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -45,7 +45,12 @@
     <string name="restart_app">Restart app</string>
     <string name="settings_advi_times">Advanced interval: maxCount</string>
     <string name="settings_advi_times_summary">Random play count from 1 to maxCount</string>
-    <string name="activity_trouble_maker_intro">This mode detects any sounds, then blasts random noise when it hears anything according to sensitivity. This ensures you are the master of the room at all times! (Does not work well on all device yet)</string>
+    <string name="activity_trouble_maker_intro">This mode detects any sounds, then blasts random noise when it hears anything according to sensitivity. This ensures you are the master of the room at all times!</string>
     <string name="activity_trouble_maker">Trouble Maker</string>
     <string name="toast_cycleing">Cycling</string>
+    <string name="choose_noise_set">Choose noise set</string>
+    <string name="tm_interval_delay">Sound interval - INTERVAL_DELAY</string>
+    <string name="tm_enable_db_mode">Decibel mode</string>
+    <string name="tm_max_db">Sensitivity threshold - MAX_DB</string>
+    <string name="tm_reference_amp">Calibration - referenceAmp</string>
 </resources>
